--- a/index.html
+++ b/index.html
@@ -95,9 +95,12 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Hi, I’m Razil Raaz, a passionate penetration tester with a deep interest in cybersecurity and ethical hacking. My goal is to help businesses identify and address security vulnerabilities before malicious actors can exploit them. With a strong background in penetration testing, vulnerability assessments, and security audits, I specialize in uncovering weaknesses in networks, applications, and systems.
-
-            I thrive in challenging environments and am dedicated to staying up-to-date with the latest security trends, tools, and techniques. I approach each project with a methodical mindset, combining technical expertise and ethical practices to provide actionable insights and recommendations that enhance an organization’s security posture. Proficient in tools like Metasploit, Burp Suite, and Nessus, with a strong foundation in ethical hacking and cybersecurity best practices.</p>
+        <p>Hi, I’m Razil Raaz,
+                        a passionate penetration tester with a deep interest in cybersecurity and ethical hacking. My goal is to help businesses identify and address security vulnerabilities before malicious actors can exploit them.
+            With a strong background in penetration testing, vulnerability assessments, and security audits, I specialize in uncovering weaknesses in networks, applications, and systems.
+            I thrive in challenging environments and am dedicated to staying up-to-date with the latest security trends, tools, and techniques.
+            I approach each project with a methodical mindset, combining technical expertise and ethical practices to provide actionable insights and recommendations that enhance an organization’s security posture.
+            Proficient in tools like Metasploit, Burp Suite, and Nessus, with a strong foundation in ethical hacking and cybersecurity best practices.</p>
     </section>
     <section id="projects">
         <h2>Projects</h2>
