--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
         <p>Email: <a href="mailto:razilhamza422@gmail.com">razilhamza422@gmail.com</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/rahul-v-s-2443ab292" target="_blank">linkedin.com/in/Rahul</a></p>
-        <p>GitHub: <a href="https://github.com/yourgithub" target="_blank">github.com/RVS1122</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/" target="_blank">linkedin.com/in/</a></p>
+        <p>GitHub: <a href="https://github.com/yourgithub" target="_blank">https://github.com/Razilraaz</a></p>
     </section>
 
     <footer>
