--- a/blog.html
+++ b/blog.html
@@ -80,8 +80,8 @@
 </head>
 <body>
     <header>
-        <img src="h1.png" alt="Rahul V S Profile Picture">
-        <h1>Rahul V S</h1>
+        <img src="hacking.png" alt=" Profile Picture">
+        <h1>Razil Raaz</h1>
         <p>Professional Penetration Tester</p>
     </header>
 
@@ -112,7 +112,7 @@
             The script automatically installs these tools if they are not already present.</p>
     </section>
     <footer>
-        <p>&copy; 2024 V S Rahul. All Rights Reserved.</p>
+        <p>&copy; 2024 Razil Raaz. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
