--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <h2>Contact Me</h2>
         <p>Email: <a href="mailto:razilhamza422@gmail.com">razilhamza422@gmail.com</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/" target="_blank">linkedin.com/in/</a></p>
-        <p>GitHub: <a href="https://github.com/yourgithub" target="_blank">https://github.com/Razilraaz</a></p>
+        <p>GitHub: <a href="https://github.com/Razilraaz" target="_blank">https://github.com/Razilraaz</a></p>
     </section>
 
     <footer>
