--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </head>
 <body>
     <header>
-        <img src="C:\Users\Razil\Downloads\hacking.png" alt=" Profile Picture">
+        <img src="hacking.png" alt=" Profile Picture">
         <h1>Razil Raaz</h1>
         <p>Professional Penetration Tester</p>
     </header>
