--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Penetration Tester Portfolio</title>
     <style>
+        /* Global Styles */
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
@@ -12,12 +14,20 @@
             background-color: #f4f4f9;
             color: #333;
         }
+
+        h2,
+        h3 {
+            color: #00796b;
+        }
+
+        /* Header Styles */
         header {
             background: linear-gradient(90deg, #1e90ff, #00bcd4);
             padding: 30px;
             text-align: center;
             color: #fff;
         }
+
         header img {
             width: 180px;
             height: 180px;
@@ -25,10 +35,13 @@
             margin-bottom: 15px;
             border: 4px solid #fff;
         }
+
+        /* Navigation Styles */
         nav {
             text-align: center;
             margin: 20px 0;
         }
+
         nav a {
             color: #00796b;
             text-decoration: none;
@@ -37,9 +50,12 @@
             font-size: 1.2em;
             transition: color 0.3s ease;
         }
+
         nav a:hover {
             color: #ff5722;
         }
+
+        /* Section Styles */
         section {
             max-width: 900px;
             margin: 20px auto;
@@ -48,39 +64,46 @@
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
-        h2 {
-            color: #00796b;
-        }
-        .project, .certification, .blog-post {
+
+        .project,
+        .certification,
+        .blog-post {
             background-color: #f9f9f9;
             padding: 15px;
             margin: 20px 0;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
+
+        /* Footer Styles */
         footer {
             text-align: center;
             padding: 20px;
             background: linear-gradient(90deg, #00796b, #004d40);
             color: #fff;
         }
+
+        /* Contact Section Styles */
         .contact {
             text-align: center;
             margin-top: 20px;
         }
+
         .contact a {
             color: #1e90ff;
             font-weight: bold;
             text-decoration: none;
         }
+
         .contact a:hover {
             text-decoration: underline;
         }
     </style>
 </head>
+
 <body>
     <header>
-        <img src="hacking.png" alt=" Profile Picture">
+        <img src="hacking.png" alt="Profile Picture">
         <h1>Razil Raaz</h1>
         <p>Professional Penetration Tester</p>
     </header>
@@ -93,32 +116,43 @@
         <a href="#contact">Contact</a>
     </nav>
 
+    <!-- About Section -->
     <section id="about">
         <h2>About Me</h2>
-        <p>Hi, I’m Razil Raaz,
-                        a passionate penetration tester with a deep interest in cybersecurity and ethical hacking. My goal is to help businesses identify and address security vulnerabilities before malicious actors can exploit them.
-            With a strong background in penetration testing, vulnerability assessments, and security audits, I specialize in uncovering weaknesses in networks, applications, and systems.
-            I thrive in challenging environments and am dedicated to staying up-to-date with the latest security trends, tools, and techniques.
-            I approach each project with a methodical mindset, combining technical expertise and ethical practices to provide actionable insights and recommendations that enhance an organization’s security posture.
-            Proficient in tools like Metasploit, Burp Suite, and Nessus, with a strong foundation in ethical hacking and cybersecurity best practices.</p>
+        <p>Hi, I’m Razil Raaz, a passionate penetration tester with a deep interest in cybersecurity and ethical hacking.
+            My goal is to help businesses identify and address security vulnerabilities before malicious actors can exploit
+            them. With a strong background in penetration testing, vulnerability assessments, and security audits, I
+            specialize in uncovering weaknesses in networks, applications, and systems.
+        </p>
+        <p>I thrive in challenging environments and am dedicated to staying up-to-date with the latest security trends,
+            tools, and techniques. Proficient in tools like Metasploit, Burp Suite, and Nessus, with a strong foundation in
+            ethical hacking and cybersecurity best practices.</p>
     </section>
+
+    <!-- Projects Section -->
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
             <h3>Web Application Security Assessment</h3>
-            <p>Performed a comprehensive security assessment of a financial web application, identifying critical vulnerabilities such as SQL injection and cross-site scripting (XSS). Delivered actionable recommendations to mitigate risks.</p>
+            <p>Performed a comprehensive security assessment of a financial web application, identifying critical
+                vulnerabilities such as SQL injection and cross-site scripting (XSS). Delivered actionable recommendations
+                to mitigate risks.</p>
         </div>
         <div class="project">
             <h3>Network Penetration Test</h3>
-            <p>Executed a network penetration test for a mid-sized company, uncovering misconfigurations and weaknesses in firewalls and wireless networks. Enhanced the overall security posture by implementing secure configurations.</p>
+            <p>Executed a network penetration test for a mid-sized company, uncovering misconfigurations and weaknesses
+                in firewalls and wireless networks. Enhanced the overall security posture by implementing secure
+                configurations.</p>
         </div>
     </section>
 
+    <!-- Certifications Section -->
     <section id="certifications">
         <h2>Certifications</h2>
         <div class="certification">
             <h3>Certified Ethical Hacker (CEH)</h3>
-            <p>Recognized for expertise in ethical hacking methodologies and tools to identify and mitigate cybersecurity threats.</p>
+            <p>Recognized for expertise in ethical hacking methodologies and tools to identify and mitigate cybersecurity
+                threats.</p>
         </div>
         <div class="certification">
             <h3>CompTIA Security+</h3>
@@ -126,11 +160,13 @@
         </div>
     </section>
 
+    <!-- Blog Section -->
     <section id="blog">
         <h2>Blog</h2>
         <div id="blog-container"></div>
     </section>
 
+    <!-- Contact Section -->
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
         <p>Email: <a href="mailto:razilhamza422@gmail.com">razilhamza422@gmail.com</a></p>
@@ -138,26 +174,24 @@
         <p>GitHub: <a href="https://github.com/Razilraaz" target="_blank">https://github.com/Razilraaz</a></p>
     </section>
 
+    <!-- Footer Section -->
     <footer>
         <p>&copy; 2024 Razil Raaz. All Rights Reserved.</p>
     </footer>
 
     <script>
-        const blogs = [
-        {
+        const blogs = [{
                 title: "How to Perform Secure Code Reviews",
                 date: "November 11, 2024",
                 summary: "Best practices and techniques for secure code analysis.",
                 link: "#"
             },
-            
             {
                 title: "Top 10 Tools for Ethical Hacking",
                 date: "December 2, 2024",
                 summary: "A detailed guide on the top tools for penetration testers.",
                 link: "blog.html"
             }
-           
         ];
 
         const blogContainer = document.getElementById('blog-container');
@@ -174,7 +208,5 @@
         });
     </script>
 </body>
+
 </html>
-
-
-
